Add listener interface for incoming messages

--- a/mptrack/mptrack.rc
+++ b/mptrack/mptrack.rc
@@ -494,7 +494,8 @@ BEGIN
     PUSHBUTTON      "Start Server",IDC_BUTTON1,7,7,50,14
     LTEXT           "Server:",IDC_STATIC,6,39,25,8
     EDITTEXT        IDC_EDIT1,36,37,96,12,ES_AUTOHSCROLL
-    PUSHBUTTON      "Connect",IDC_BUTTON2,138,36,50,14
+    PUSHBUTTON      "Connect",IDC_BUTTON2,174,36,50,14
+    EDITTEXT        IDC_EDIT2,138,36,27,12,ES_AUTOHSCROLL
 END
 
 
