Add module list

--- a/mptrack/mptrack.rc
+++ b/mptrack/mptrack.rc
@@ -496,6 +496,7 @@ BEGIN
     EDITTEXT        IDC_EDIT1,36,37,96,12,ES_AUTOHSCROLL
     PUSHBUTTON      "Connect",IDC_BUTTON2,174,36,50,14
     EDITTEXT        IDC_EDIT2,138,36,27,12,ES_AUTOHSCROLL
+    CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,57,293,93
 END
 
 
