Send edit position

--- a/mptrack/mptrack.rc
+++ b/mptrack/mptrack.rc
@@ -532,7 +532,6 @@ BEGIN
     CONTROL         "",IDC_SPIN1,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,270,180,11,14
 END
 
-
 IDD_SHAREMODULE DIALOGEX 0, 0, 201, 81
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Share Module for Network Collaboration"
@@ -548,6 +547,16 @@ BEGIN
     CONTROL         "",IDC_SPIN2,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,162,24,11,14
     LTEXT           "&Password:",IDC_STATIC,6,45,114,8
     EDITTEXT        IDC_EDIT3,126,42,66,14,ES_AUTOHSCROLL
+END
+
+IDD_NETWORKCHAT DIALOGEX 0, 0, 309, 177
+STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+CAPTION "Chat"
+FONT 8, "MS Shell Dlg", 400, 0, 0x1
+BEGIN
+    DEFPUSHBUTTON   "Send",IDOK,252,156,50,14
+    EDITTEXT        IDC_EDIT1,6,6,294,144,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT2,6,156,240,14,ES_AUTOHSCROLL
 END
 
 
@@ -767,14 +776,6 @@ BEGIN
         BOTTOMMARGIN, 271
     END
 
-    IDD_LFOPLUGIN, DIALOG
-    BEGIN
-        LEFTMARGIN, 7
-        RIGHTMARGIN, 296
-        TOPMARGIN, 7
-        BOTTOMMARGIN, 194
-    END
-
     IDD_NETWORKING, DIALOG
     BEGIN
         LEFTMARGIN, 7
@@ -783,12 +784,28 @@ BEGIN
         BOTTOMMARGIN, 134
     END
 
+    IDD_LFOPLUGIN, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 296
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 194
+    END
+
     IDD_SHAREMODULE, DIALOG
     BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 194
         TOPMARGIN, 7
         BOTTOMMARGIN, 74
+    END
+
+    IDD_NETWORKCHAT, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 302
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 170
     END
 END
 #endif    // APSTUDIO_INVOKED
@@ -850,6 +867,11 @@ BEGIN
 END
 
 IDD_SHAREMODULE AFX_DIALOG_LAYOUT
+BEGIN
+    0
+END
+
+IDD_NETWORKCHAT AFX_DIALOG_LAYOUT
 BEGIN
     0
 END
