--- a/mptrack/mptrack.rc
+++ b/mptrack/mptrack.rc
@@ -488,7 +488,7 @@ BEGIN
 END
 
 IDD_NETWORKING DIALOGEX 0, 0, 309, 141
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Networking"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
@@ -551,12 +551,12 @@ BEGIN
 END
 
 IDD_NETWORKCHAT DIALOGEX 0, 0, 309, 177
-STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Chat"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "Send",IDOK,252,156,50,14
-    EDITTEXT        IDC_EDIT1,6,6,294,144,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT1,6,6,294,144,ES_MULTILINE | ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT2,6,156,240,14,ES_AUTOHSCROLL
 END
 
@@ -869,7 +869,12 @@ END
 
 IDD_NETWORKING AFX_DIALOG_LAYOUT
 BEGIN
-    0
+    0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 0, 0,
+    0, 0, 100, 100
 END
 
 IDD_SHAREMODULE AFX_DIALOG_LAYOUT
@@ -879,7 +884,10 @@ END
 
 IDD_NETWORKCHAT AFX_DIALOG_LAYOUT
 BEGIN
-    0
+    0,
+    100, 100, 0, 0,
+    0, 0, 100, 100,
+    0, 100, 100, 0
 END
 
 #endif    // German (Germany) resources
