--- a/mptrack/mptrack.rc
+++ b/mptrack/mptrack.rc
@@ -487,16 +487,18 @@ BEGIN
     LTEXT           "Support for native host system audio output is EXPERIMENTAL. Consult the OpenMPT manual for more information.",IDC_STATIC,7,65,238,23
 END
 
-IDD_NETWORKING DIALOGEX 0, 0, 309, 141
+IDD_NETWORKING DIALOGEX 0, 0, 309, 162
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Networking"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "Server:",IDC_STATIC,6,9,25,8
     EDITTEXT        IDC_EDIT1,36,7,96,12,ES_AUTOHSCROLL
-    PUSHBUTTON      "Connect",IDC_BUTTON2,174,6,50,14
+    PUSHBUTTON      "C&onnect",IDC_BUTTON2,174,6,50,14
     EDITTEXT        IDC_EDIT2,138,6,27,12,ES_AUTOHSCROLL
     CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,27,293,105
+    PUSHBUTTON      "Join As &Collaborator",IDC_BUTTON1,220,138,82,17
+    PUSHBUTTON      "Join As &Spectator",IDC_BUTTON3,132,138,82,17
 END
 
 IDD_LFOPLUGIN DIALOGEX 0, 0, 303, 201
@@ -782,7 +784,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 302
         TOPMARGIN, 7
-        BOTTOMMARGIN, 134
+        BOTTOMMARGIN, 155
     END
 
     IDD_LFOPLUGIN, DIALOG
@@ -874,7 +876,9 @@ BEGIN
     0, 0, 0, 0,
     0, 0, 0, 0,
     0, 0, 0, 0,
-    0, 0, 100, 100
+    0, 0, 100, 100,
+    100, 100, 0, 0,
+    100, 100, 0, 0
 END
 
 IDD_SHAREMODULE AFX_DIALOG_LAYOUT
