Show annotation editor at annotated position

--- a/mptrack/mptrack.rc
+++ b/mptrack/mptrack.rc
@@ -563,12 +563,12 @@ BEGIN
 END
 
 IDD_ANNOTATION DIALOGEX 0, 0, 121, 50
-STYLE DS_SETFONT | DS_FIXEDSYS | DS_CENTERMOUSE | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 EXSTYLE WS_EX_TOOLWINDOW
 CAPTION "Annotation"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_EDIT1,0,0,121,49,ES_MULTILINE | ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT1,0,0,121,49,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN
 END
 
 
