Show users and annotations in chat window

--- a/mptrack/mptrack.rc
+++ b/mptrack/mptrack.rc
@@ -552,14 +552,19 @@ BEGIN
     EDITTEXT        IDC_EDIT3,126,42,66,14,ES_AUTOHSCROLL
 END
 
-IDD_NETWORKCHAT DIALOGEX 0, 0, 309, 177
+IDD_NETWORKCHAT DIALOGEX 0, 0, 351, 207
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "Chat"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "Send",IDOK,252,156,50,14
-    EDITTEXT        IDC_EDIT1,6,6,294,144,ES_MULTILINE | ES_AUTOHSCROLL
-    EDITTEXT        IDC_EDIT2,6,156,240,14,ES_AUTOHSCROLL
+    DEFPUSHBUTTON   "Send",IDOK,294,120,50,14
+    EDITTEXT        IDC_EDIT1,6,6,252,108,ES_MULTILINE | ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT2,6,120,282,14,ES_AUTOHSCROLL
+    LISTBOX         IDC_LIST1,264,18,84,96,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Users:",IDC_STATIC,264,6,22,8
+    CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,6,138,336,1
+    LISTBOX         IDC_LIST2,6,156,336,48,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Annotations:",IDC_STATIC,6,144,42,8
 END
 
 IDD_ANNOTATION DIALOGEX 0, 0, 121, 50
@@ -815,9 +820,9 @@ BEGIN
     IDD_NETWORKCHAT, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 302
+        RIGHTMARGIN, 344
         TOPMARGIN, 7
-        BOTTOMMARGIN, 170
+        BOTTOMMARGIN, 200
     END
 
     IDD_ANNOTATION, DIALOG
@@ -918,7 +923,12 @@ BEGIN
     0,
     100, 100, 0, 0,
     0, 0, 100, 100,
-    0, 100, 100, 0
+    0, 100, 100, 0,
+    100, 0, 0, 100,
+    100, 0, 0, 0,
+    0, 100, 100, 0,
+    0, 100, 100, 100,
+    0, 100, 0, 0
 END
 
 IDD_ANNOTATION AFX_DIALOG_LAYOUT
