--- a/mptrack/mptrack.rc
+++ b/mptrack/mptrack.rc
@@ -560,11 +560,10 @@ BEGIN
     DEFPUSHBUTTON   "Send",IDOK,294,120,50,14
     EDITTEXT        IDC_EDIT1,6,6,252,108,ES_MULTILINE | ES_AUTOHSCROLL
     EDITTEXT        IDC_EDIT2,6,120,282,14,ES_AUTOHSCROLL
-    LISTBOX         IDC_LIST1,264,18,84,96,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "Users:",IDC_STATIC,264,6,22,8
+    CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,264,6,80,108
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,6,138,336,1
-    LISTBOX         IDC_LIST2,6,156,336,48,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Annotations:",IDC_STATIC,6,144,42,8
+    LISTBOX         IDC_LIST2,6,156,336,48,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_ANNOTATION DIALOGEX 0, 0, 121, 50
@@ -925,10 +924,9 @@ BEGIN
     0, 0, 100, 100,
     0, 100, 100, 0,
     100, 0, 0, 100,
-    100, 0, 0, 0,
     0, 100, 100, 0,
-    0, 100, 100, 100,
-    0, 100, 0, 0
+    0, 100, 0, 0,
+    0, 100, 100, 100
 END
 
 IDD_ANNOTATION AFX_DIALOG_LAYOUT
