- Fix scrolling in chat and annotation view - Fix deadlock in strands

--- a/mptrack/mptrack.rc
+++ b/mptrack/mptrack.rc
@@ -558,7 +558,7 @@ CAPTION "Chat"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     DEFPUSHBUTTON   "Send",IDOK,294,120,50,14
-    EDITTEXT        IDC_EDIT1,6,6,252,108,ES_MULTILINE | ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT1,6,6,252,108,ES_MULTILINE | ES_AUTOVSCROLL | WS_VSCROLL
     EDITTEXT        IDC_EDIT2,6,120,282,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,264,6,80,108
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,6,138,336,1
@@ -566,13 +566,13 @@ BEGIN
     LISTBOX         IDC_LIST2,6,156,336,48,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
-IDD_ANNOTATION DIALOGEX 0, 0, 121, 50
+IDD_ANNOTATION DIALOGEX 0, 0, 120, 50
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
-EXSTYLE WS_EX_TOOLWINDOW
+EXSTYLE WS_EX_TOOLWINDOW | WS_EX_STATICEDGE
 CAPTION "Annotation"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    EDITTEXT        IDC_EDIT1,0,0,121,49,ES_MULTILINE | ES_AUTOHSCROLL | ES_WANTRETURN
+    EDITTEXT        IDC_EDIT1,0,0,120,49,ES_MULTILINE | ES_AUTOVSCROLL | ES_WANTRETURN
 END
 
 
@@ -827,7 +827,7 @@ BEGIN
     IDD_ANNOTATION, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 114
+        RIGHTMARGIN, 113
         TOPMARGIN, 7
         BOTTOMMARGIN, 43
     END
