Add the action log

--- a/mptrack/mptrack.rc
+++ b/mptrack/mptrack.rc
@@ -562,8 +562,9 @@ BEGIN
     EDITTEXT        IDC_EDIT2,6,120,282,14,ES_AUTOHSCROLL
     CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,264,6,80,108
     CONTROL         "",IDC_STATIC,"Static",SS_ETCHEDHORZ,6,138,336,1
-    LTEXT           "Annotations:",IDC_STATIC,6,144,42,8
     LISTBOX         IDC_LIST2,6,156,336,48,LBS_SORT | LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "",IDC_TAB1,"SysTabControl32",0x0,6,144,336,60
+    LISTBOX         IDC_LIST4,6,156,336,48,LBS_NOINTEGRALHEIGHT | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_ANNOTATION DIALOGEX 0, 0, 120, 50
@@ -925,7 +926,8 @@ BEGIN
     0, 100, 100, 0,
     100, 0, 0, 100,
     0, 100, 100, 0,
-    0, 100, 0, 0,
+    0, 100, 100, 100,
+    0, 0, 100, 100,
     0, 100, 100, 100
 END
 
