--- a/mptrack/mptrack.rc
+++ b/mptrack/mptrack.rc
@@ -494,8 +494,9 @@ FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "Server:",IDC_STATIC,6,9,25,8
     EDITTEXT        IDC_EDIT1,36,7,96,12,ES_AUTOHSCROLL
-    PUSHBUTTON      "C&onnect",IDC_BUTTON2,174,6,50,14
-    EDITTEXT        IDC_EDIT2,138,6,27,12,ES_AUTOHSCROLL
+    LTEXT           "Port:",IDC_STATIC,138,8,17,8
+    EDITTEXT        IDC_EDIT2,162,6,27,12,ES_AUTOHSCROLL
+    PUSHBUTTON      "C&onnect",IDC_BUTTON2,198,6,50,14
     CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,27,293,105
     PUSHBUTTON      "Join As &Collaborator",IDC_BUTTON1,220,138,82,17
     PUSHBUTTON      "Join As &Spectator",IDC_BUTTON3,132,138,82,17
@@ -904,6 +905,7 @@ END
 IDD_NETWORKING AFX_DIALOG_LAYOUT
 BEGIN
     0,
+    0, 0, 0, 0,
     0, 0, 0, 0,
     0, 0, 0, 0,
     0, 0, 0, 0,
