Relabel join button

--- a/mptrack/mptrack.rc
+++ b/mptrack/mptrack.rc
@@ -497,7 +497,7 @@ BEGIN
     LTEXT           "Port:",IDC_STATIC,138,8,17,8
     EDITTEXT        IDC_EDIT2,162,6,27,12,ES_AUTOHSCROLL
     PUSHBUTTON      "C&onnect",IDC_BUTTON2,198,6,50,14
-    CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,27,293,105
+    CONTROL         "",IDC_LIST1,"SysListView32",LVS_REPORT | LVS_SORTASCENDING | LVS_ALIGNLEFT | LVS_NOSORTHEADER | WS_BORDER | WS_TABSTOP,7,27,293,105
     PUSHBUTTON      "Join As &Collaborator",IDC_BUTTON1,220,138,82,17
     PUSHBUTTON      "Join As &Spectator",IDC_BUTTON3,132,138,82,17
 END
@@ -541,8 +541,8 @@ STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSM
 CAPTION "Share Module for Network Collaboration"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,90,60,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,144,60,50,14
+    DEFPUSHBUTTON   "&Join",IDOK,90,60,50,14
+    PUSHBUTTON      "C&ancel",IDCANCEL,144,60,50,14
     LTEXT           "Maximum number of &collaborators:",IDC_STATIC,6,9,114,8
     EDITTEXT        IDC_EDIT1,126,6,36,14,ES_AUTOHSCROLL | ES_NUMBER
     CONTROL         "",IDC_SPIN1,"msctls_updown32",UDS_SETBUDDYINT | UDS_ALIGNRIGHT | UDS_AUTOBUDDY | UDS_ARROWKEYS,162,6,11,14
