--- a/mptrack/mptrack.rc
+++ b/mptrack/mptrack.rc
@@ -489,7 +489,7 @@ END
 
 IDD_NETWORKING DIALOGEX 0, 0, 309, 162
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
-CAPTION "Networking"
+CAPTION "Join a shared song"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "Server:",IDC_STATIC,6,9,25,8
